--- a/src/App.css
+++ b/src/App.css
@@ -62,15 +62,18 @@
 .menu {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
-  margin: auto;
-  justify-content: start;
-  padding-top: 3.5rem;
+  margin-top: 3rem;
+  max-width: 1600px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 3rem 0;
+  justify-content: center;
 }
 
 .card {
   width: 25%;
-  padding: 1.5rem 2rem;
+  min-width: 300px;
+  padding: 1.5rem 1rem;
   text-transform: capitalize;
 }
 
@@ -109,7 +112,7 @@
 }
 
 .ingredients li {
-  padding-left: 1.5rem;
+  padding-left: 3rem;
   list-style: none;
   margin-bottom: 0.5rem;
 }
@@ -117,7 +120,7 @@
   color: var(--primary);
 }
 
-.card-content .price {
+.price {
   font-size: 1.5rem;
   text-align: center;
   padding: 1.75rem;
@@ -134,7 +137,6 @@
 .btn {
   border-radius: 5px;
   border: none;
-  display: inline-block;
   cursor: pointer;
   font-size: 15px;
   font-weight: bold;
@@ -145,13 +147,122 @@
 .btn-primary {
   background-color: var(--primary);
   color: var(--light);
-  box-shadow: inset 0px 1px 3px 0px var(--dark);
-  background: linear-gradient(to bottom, var(--light) 5%, var(--primary) 25%);
+  box-shadow: 0px 1px 3px 0px var(--dark);
+  background: (--primary);
 }
 
 .btn-secondary {
   background-color: var(--secondary);
   color: var(--light);
-  box-shadow: inset 0px 1px 3px 0px var(--dark);
-  background: linear-gradient(to bottom, var(--dark) 5%, var(--secondary) 25%);
+  box-shadow: 0px 1px 3px 0px var(--dark);
+  background: var(--secondary);
+}
+
+/* pizza card  */
+.pizza-view {
+  display: flex;
+  justify-content: bottom;
+  border-radius: 4px;
+  margin: 8rem 2rem;
+  border: 2px solid #ccc;
+}
+
+.pizza-view .image {
+  width: 40%;
+  background-size: cover;
+}
+
+.pizza-view .image img {
+  width: 100%;
+}
+
+.pizza-view .content {
+  width: 60%;
+  padding: 1rem;
+}
+
+.pizza-view .content h4 {
+  text-transform: capitalize;
+  font-size: 1.25rem;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #ccc;
+  margin-bottom: 1rem;
+}
+
+.pizza-view .desc {
+  margin-bottom: 2rem;
+}
+
+.pizza-view ul {
+  margin: 1rem 0;
+  padding-left: 2rem;
+}
+
+.pizza-view .price-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.cart {
+  margin-top: 6rem;
+}
+
+.cart-view {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.cart li {
+  padding: 1rem;
+  border-bottom: 2px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cart li img {
+  width: 85px;
+  margin-right: 2rem;
+}
+
+.cart .product,
+.cart .price {
+  display: flex;
+  align-items: center;
+  margin: 0.25rem;
+  text-transform: capitalize;
+}
+
+/* ***notFound***] */
+.notfound {
+  padding: 6rem 0;
+  background-color: var(--ligth);
+  color: var(--dark);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: calc(100vh);
+}
+
+.notfound h2 {
+  font-size: 3.2rem;
+}
+.notfound p {
+  font-size: 1.25rem;
+  font-weight: 400;
+  font-style: italic;
+  color: var(--secondary);
+}
+
+.notfound img {
+  height: 300px;
+}
+
+.notfound span {
+  font-size: 4rem;
 }
