--- a/src/App.css
+++ b/src/App.css
@@ -205,14 +205,22 @@
   margin-top: 2rem;
 }
 
+/* ***cart*** */
 .cart {
-  margin-top: 6rem;
+  margin: 8rem 1.15rem 0 1.15rem;
+  height: calc(100vh - 6rem);
+  
+}
+
+.cart h2{
+  color: var(--dark);
 }
 
 .cart-view {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  max-width: 1200px;
+  margin: 0;
 }
 
 .cart li {
@@ -221,6 +229,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 110px;
+  margin: 0 3rem;
 }
 
 .cart li img {
@@ -234,6 +244,29 @@
   align-items: center;
   margin: 0.25rem;
   text-transform: capitalize;
+  font-size: 1.2rem;
+}
+.btns{
+  margin: 1.5rem;
+  display: flex;
+  align-items: center;
+}
+.btns .btn-cart{
+  border: none;
+  margin: .25rem;
+  padding: 10px 14px;
+  border-radius: 5px;
+  text-align: center;
+}
+.btns .bold{
+  margin: .25rem;
+}
+
+.total {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding: 3rem;
 }
 
 /* ***notFound***] */
@@ -265,4 +298,24 @@
 
 .notfound span {
   font-size: 4rem;
+}
+
+/* ***footer *** */
+footer{
+  display: flex;
+  height: 56px; 
+  background-color: var(--disabled);
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .name {
+  color: var(--dark);
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+footer span {
+  color: var(--light);
+  font-style: italic;
 }
